<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/bottom_navigation_movies"
        android:icon="@drawable/sl_bottom_navigation_movie"
        android:title="@string/bottom_navigation_menu_movies" />

    <item
        android:id="@+id/bottom_navigation_performers"
        android:icon="@drawable/sl_bottom_navigation_theater"
        android:title="@string/bottom_navigation_menu_performers" />

    <item
        android:id="@+id/bottom_navigation_search"
        android:icon="@drawable/sl_bottom_navigation_search"
        android:title="@string/bottom_navigation_menu_search" />
</menu>