...
            android:maxLines="1"
            android:paddingStart="@dimen/double_padding"
            android:paddingEnd="@dimen/default_padding"
            android:text="@string/bottom_navigation_menu_movies"

            android:textAppearance="@style/TextAppearance.Material3.HeadlineSmall"
            app:layout_constraintBottom_toTopOf="@+id/content_subtitle"
            app:layout_constraintEnd_toStartOf="@id/content_label"
            app:layout_constraintStart_toEndOf="@id/content_image"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/content_label"
...
