...
                app:endIconMode="custom"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/edit_watch_date_icon"
                app:layout_constraintTop_toBottomOf="@id/edit_linked_performers">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/watch_date_input"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="Watch Date"
                    android:text="" />

            </com.google.android.material.textfield.TextInputLayout>
...
