...
                android:textAppearance="@style/TextAppearance.Material3.HeadlineSmall"
                android:textColor="?colorOnSurface"
                app:layout_constraintEnd_toEndOf="parent"

                app:layout_constraintStart_toEndOf="@id/image_container"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Star Wars: The Rise of Skywalker" />

            <TextView
                android:id="@+id/content_subtitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/double_margin"
...
